prevent cutoff of header title

--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -6,6 +6,7 @@
 .header h1 {
   padding: 2px 0;
   white-space: nowrap;
+  overflow: visible;
 }
 
 .header h1:before {
